# fitness_bot_tg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bot/: config.py
bot/database/: crud.py  models.py  session.py
